Fix gap on right below $bp-large > replace left: with margin-left: in .header-title

--- a/assets/css/1-base/base.sass
+++ b/assets/css/1-base/base.sass
@@ -10,7 +10,6 @@ body
 	-moz-osx-font-smoothing: grayscale
 	padding: 0
 	margin: 0
-	background: lightgrey
 
 	font-size: 15px
 	line-height: 1.6
