--- a/assets/css/2-modules/header-home.sass
+++ b/assets/css/2-modules/header-home.sass
@@ -30,7 +30,7 @@
 		position: relative
 		display: flex
 		top: $touch-content-top
-		left: 2.5vw
+		margin-left: 2.5vw
 		z-index: 6
 		@media(min-width: $bp-large)
 			top: $content-top
